<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.spnj1.Sign_in"
    android:background="@drawable/best_grunge_kaskus_wallpaper_by_elleven_dflo___copy"
    >

    <ImageView
        android:id="@+id/logos"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/unesco_logo_white"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/logos"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:hint="@string/usernem"
        android:textColorHint="#fff"
        android:drawableEnd="@drawable/ic_person_pin_white_24dp"
        android:background="@drawable/edittext"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/Pass"
        android:textColorHint="#fff"
        android:drawableEnd="@drawable/ic_lock_outline_white_24dp"
        android:background="@drawable/edittext"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:background="@drawable/btn_ijo"
        android:onClick="menu"/>
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text1"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/signu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signup"
        android:layout_alignBottom="@+id/signup"
        android:layout_toEndOf="@+id/logos"
        android:text="@string/signUUP"
        android:textStyle="bold"
        android:textColor="#fff" />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"/>
    <Button
        android:id="@+id/facebook"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/or"
        android:layout_marginTop="15dp"
        android:text="@string/pesbuk"
        android:textColor="#fff"
        android:background="@drawable/btn_fb"
        android:textStyle="bold"/>
</RelativeLayout>
