<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.acer.spnj1.sign_up"
    android:background="@drawable/best_grunge_kaskus_wallpaper_by_elleven_dflo___copy">

    <ImageView
        android:id="@+id/log"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/unesco_logo_white" />

    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/log"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:hint="@string/user"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableEnd="@drawable/ic_person_pin_white_24dp"
        android:background="@drawable/edittext"
        />
    <EditText
        android:id="@+id/emil"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/email"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/ic_email_white_24dp"/>

    <EditText
        android:id="@+id/passw"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/emil"
        android:hint="@string/pw"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:background="@drawable/edittext"
        android:drawableEnd="@drawable/ic_lock_outline_white_24dp"
        />
    <CheckBox
        android:id="@+id/cekbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"/>
    <Button
        android:id="@+id/signupp"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cekbox"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:background="@drawable/btn_ijo"
        android:onClick="menu"/>
</RelativeLayout>
